src/tests/test-src/errors/E71-duplicate-import.syntran
// E71: duplicate-import
// The same module was imported more than once

use mymod;
use mymod;
